prima comanda - 1h 14 min

--- a/index.html
+++ b/index.html
@@ -61,13 +61,19 @@
       </div>
 
       <div id="main">
-        <div class="page">
+        <div id="home" class="page">
+          <h2>Home</h2>
+
+          <p>Some info abaout me... comming soon!</p>
+        </div>
+
+        <div id="skills" class="page">
           <h2>Skills</h2>
 
           <ul id="skills-list"></ul>
         </div>
 
-        <div class="page">
+        <div id="languages" class="page">
           <h2>Known Languages</h2>
 
           <table border="1">
@@ -84,6 +90,12 @@
               <td>Sufficient</td>
             </tr>
           </table>
+        </div>
+
+        <div id="projects" class="page">
+          <h2>Projects</h2>
+
+          <ul id="skills-list"></ul>
         </div>
       </div>
     </section>
