display home page with js

--- a/index.html
+++ b/index.html
@@ -61,18 +61,19 @@
       </div>
 
       <div id="main">
+        <!--HOME-->
         <div id="home" class="page">
           <h2>Home</h2>
 
           <p>Some info abaout me... comming soon!</p>
         </div>
-
+        <!--SKILLS-->
         <div id="skills" class="page">
           <h2>Skills</h2>
 
           <ul id="skills-list"></ul>
         </div>
-
+        <!--LANGUAGES-->
         <div id="languages" class="page">
           <h2>Known Languages</h2>
 
@@ -91,7 +92,7 @@
             </tr>
           </table>
         </div>
-
+        <!--PROJECTS-->
         <div id="projects" class="page">
           <h2>Projects</h2>
 
