display pages with js

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       </p>
 
       <ul id="top-menu-bar">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Know Languages</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="#" onclick="displayHome()">HOME</a></li>
+        <li><a href="#" onclick="displaySkills()">Skills</a></li>
+        <li><a href="#" onclick="displayLanguages()">Know Languages</a></li>
+        <li><a href="#" onclick="displayProjects()">Projects</a></li>
       </ul>
     </header>
 
