change photo profile and info about me

--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     <header>
       <h1>Erema Marian</h1>
 
-      <img src="images.jpg" alt="Schior" />
+      <img src="marian.jpeg" alt="face-snow" width="250px" />
 
-      <h2 id="job-title">
-        Profesor de Educatie Fizica si Sport, Antrenor de schi si viitor
-        programator
-      </h2>
-      <p style="color: red; text-align: center">
-        Bine ati venit la <strong>curs</strong>
-      </p>
+      <h2 id="job-title">Profesor de educatie fizica si sport</h2>
+      <h3 id="hobby-job-title">
+        Instructor si antrenor de schi alpin, ciclism, natatie, dans sportiv
+      </h3>
+      <p style="color: red; text-align: center"><strong>CV</strong>-ul meu</p>
 
       <ul id="top-menu-bar">
         <li><a href="#" onclick="displayHome()">HOME</a></li>
@@ -63,16 +61,23 @@
       <div id="main">
         <!--HOME-->
         <div id="home" class="page">
-          <h2>Home</h2>
-
-          <p>Some info abaout me... comming soon!</p>
+          <h2>Despre mine</h2>
+          <p>
+            Sunt o fire energica, pasionata de sport, miscare si tot ce tine de
+            miscarea corpului uman;
+          </p>
+          <p>
+            Imi place sa iau parte la noi provocari - IT-ul fiind una dintre ele
+            si incepe sa ma atraga din ce in ce mai mult;
+          </p>
         </div>
+
         <!--SKILLS-->
         <div id="skills" class="page">
           <h2>Skills</h2>
-
           <ul id="skills-list"></ul>
         </div>
+
         <!--LANGUAGES-->
         <div id="languages" class="page">
           <h2>Known Languages</h2>
@@ -88,10 +93,11 @@
             </tr>
             <tr>
               <td>English</td>
-              <td>Sufficient</td>
+              <td>B1</td>
             </tr>
           </table>
         </div>
+
         <!--PROJECTS-->
         <div id="projects" class="page">
           <h2>Projects</h2>
