--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <!--PROJECTS-->
         <div id="projects" class="page">
           <h2>Projects</h2>
+          <p>Primul meu CV in GitHub</p>
           <ul id="skills-list"></ul>
         </div>
       </div>
