add displayPage function

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <p style="color: red; text-align: center"><strong>CV</strong>-ul meu</p>
 
       <ul id="top-menu-bar">
-        <li><a href="#" onclick="displayHome()">HOME</a></li>
-        <li><a href="#" onclick="displaySkills()">Skills</a></li>
+        <li><a href="#" onclick="displayPage('home')">HOME</a></li>
+        <li><a href="#" onclick="displayPage('skills')">Skills</a></li>
         <li><a href="#" onclick="displayLanguages()">Know Languages</a></li>
         <li><a href="#" onclick="displayProjects()">Projects</a></li>
       </ul>
@@ -62,14 +62,7 @@
         <!--HOME-->
         <div id="home" class="page">
           <h2>Despre mine</h2>
-          <p>
-            Sunt o fire energica, pasionata de sport, miscare si tot ce tine de
-            miscarea corpului uman;
-          </p>
-          <p>
-            Imi place sa iau parte la noi provocari - IT-ul fiind una dintre ele
-            si incepe sa ma atraga din ce in ce mai mult;
-          </p>
+          <p>Informatii despre mine...in curand!</p>
         </div>
 
         <!--SKILLS-->
