--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <a href="#" onclick="displayPage('languages')">Know Languages</a>
         </li>
         <li><a href="#" onclick="displayPage('projects')">Projects</a></li>
+        <li><a href="#" onclick="displayPage('rubik')">Rubik</a></li>
       </ul>
     </header>
 
@@ -98,6 +99,11 @@
           <h2>Projects</h2>
           <p>Primul meu CV in GitHub</p>
           <ul id="skills-list"></ul>
+        </div>
+
+        <!--Rubik-->
+        <div id="rubik" class="page">
+          <h2>Rubik</h2>
         </div>
       </div>
     </section>
