--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <header>
-      <h1>Erema Marian</h1>
-
-      <img src="marian.jpeg" alt="face-snow" width="250px" />
-
-      <h2 id="job-title">Profesor de educatie fizica si sport</h2>
-      <h3 id="hobby-job-title">
-        Instructor si antrenor de schi alpin, ciclism, natatie, dans sportiv
-      </h3>
-      <p style="color: red; text-align: center"><strong>CV</strong>-ul meu</p>
+      <div id="header-wrapper">
+        <div><img src="marian.jpeg" alt="face-snow" width="150px" /></div>
+        <div>
+          <h1>Erema Marian</h1>
+          <h2 id="job-title">
+            Profesor de educatie fizica si sport si antrenor sportiv
+          </h2>
+        </div>
+      </div>
 
       <ul id="top-menu-bar">
         <li><a href="#" onclick="displayPage('home')">HOME</a></li>
