--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section>
           <form action="">
             <div>
-              <label for="subscriberEmail">Email</label>
+              <label for="subscriberEmail">Email:</label>
               <input
                 type="email"
                 required
@@ -58,7 +58,8 @@
           </form>
         </section>
 
-        <section>Menu 2</section>
+        <!--Menu 2-->
+        <section></section>
       </div>
 
       <div id="main">
@@ -99,6 +100,7 @@
           <h2>Projects</h2>
           <p>Primul meu CV in GitHub</p>
           <ul id="skills-list"></ul>
+          <p>In scurt timp...al II-lea proiect in GitHub</p>
         </div>
 
         <!--Rubik-->
