--- a/index.html
+++ b/index.html
@@ -7,15 +7,29 @@
     <title>Erema Marian</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <header>
       <div id="header-wrapper">
-        <div><img src="marian.jpeg" alt="face-snow" width="150px" /></div>
+        <div>
+          <img id="avatar" src="marian.jpeg" alt="Erema" width="150px" />
+        </div>
         <div>
           <h1>Erema Marian</h1>
           <h2 id="job-title">
-            Profesor de educatie fizica si sport si antrenor sportiv
+            Teacher of physical education and sports & Student at
+            <a href="https://fasttrackit.org/" target="_blank">FastTrackIT</a> &
+            Trainer at
           </h2>
+        </div>
+        <div>
+          <img
+            id="sportiland"
+            src="SportiLand-COLOR.png"
+            alt="sportiland"
+            height="85px"
+            class="link"
+          />
         </div>
       </div>
 
@@ -26,13 +40,14 @@
           <a href="#" data-page="languages">Know Languages</a>
         </li>
         <li><a href="#" data-page="projects">Projects</a></li>
-        <li><a href="#" data-page="rubik">Rubik</a></li>
+        <li><a href="#" data-page="rubik">◊Rubik</a></li>
       </ul>
     </header>
 
     <section id="content">
       <div id="side-menu">
         <section>
+          <h2>Contact</h2>
           <form action="">
             <div>
               <label for="subscriberEmail">Email:</label>
@@ -59,7 +74,20 @@
         </section>
 
         <!--Menu 2-->
-        <section></section>
+        <section>
+          <h3>Rubik</h3>
+          <div class="square1-1"></div>
+          <div class="square1-2"></div>
+          <div class="square1-3"></div>
+          <div class="square2-0"></div>
+          <div class="square2-1"></div>
+          <div class="square2-2"></div>
+          <div class="square2-3"></div>
+          <div class="square3-0"></div>
+          <div class="square3-1"></div>
+          <div class="square3-2"></div>
+          <div class="square3-3"></div>
+        </section>
       </div>
 
       <div id="main">
@@ -70,7 +98,7 @@
         </div>
 
         <!--SKILLS-->
-        <div id="skills" class="page">
+        <div id="skills" , class="page">
           <h2>Skills</h2>
           <ul id="skills-list"></ul>
         </div>
