footer & some other links added

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
           </h2>
         </div>
         <div>
-          <img
-            id="sportiland"
-            src="SportiLand-COLOR.png"
-            alt="sportiland"
-            height="85px"
-            class="link"
-          />
+          <a target="_blank" href="https://www.facebook.com/sportiland"
+            ><img
+              id="sportiland"
+              src="SportiLand-COLOR.png"
+              alt="sportiland"
+              height="85px"
+              class="link"
+          /></a>
         </div>
       </div>
 
@@ -138,8 +139,18 @@
       </div>
     </section>
 
-    <footer>
-      <a target="_blank" href="https://www.google.com">Google</a>
+    <footer class="footer-photo">
+      <a target="_blank" href="https://www.google.com"
+        ><img height="65" src="google.png"
+      /></a>
+      <a target="_blank" href="https://www.facebook.com/sportiland"
+        ><img height="65" src="SportiLand-COLOR.png"
+      /></a>
+      <a
+        target="_blank"
+        href="https://www.linkedin.com/in/marian-erema-a41602203/"
+        ><img height="65" src="linkedin.png"
+      /></a>
     </footer>
 
     <script src="index.js"></script>
