--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
       <a target="_blank" href="https://www.facebook.com/sportiland"
         ><img height="65" src="SportiLand-COLOR.png"
       /></a>
-      <a
-        target="_blank"
-        href="https://www.linkedin.com/in/marian-erema-a41602203/"
+      <a target="_blank" href="https://www.linkedin.com/in/marianerema"
         ><img height="65" src="linkedin.png"
       /></a>
     </footer>
